--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 click==6.7
+colorama==0.3.9
 flake8==3.5.0
 Flask==0.12.2
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
 mccabe==0.6.1
+py==1.4.34
 pycodestyle==2.3.1
 pyflakes==1.6.0
+pytest==3.2.3
 Werkzeug==0.12.2
